[package]
name = "httpie"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = {version = "4.5", features = ["derive", "cargo"]}
colored = "3.1.1"
jsonxf = "1.1"
mime = "0.3"
reqwest ={ version = "0.13.2", features = ["json"]}
tokio ={ version = "1", features = ["full"]}
syntect = { version = "5.3.0" }
